# Asuka

./: .gitignore  .gitmodules  404.html  Asuka.sln  Asuka.slnx  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Makefile  config.h.cmake  config.h.msbuild  config.h.msbuild.py  docker-compose.yml  index.html  pyproject.toml  requirements.txt
.github/workflows/: mirror-to-codeberg.yml
3D_Reconstruction/: index.html
ASR_TTS/: index.html
Ahri/Asuka/: __init__.py  constants.py  logger.py
Ahri/Asuka/audio/: asr.py  main.py  tts.py
Ahri/Asuka/camera/: base.py  haikang.py  handler.py  opencv.py  realsense.py  scheduler.py
Ahri/Asuka/config/: config.py
Ahri/Asuka/inference/: __init__.py  engine.py
Ahri/Asuka/llm/: anthropic_provider.py  base.py  finetune.py  inference.py  inference_pipline.py  llm_provider.py  ollama_provider.py  openai_provider.py
Ahri/Asuka/models/: LeNet5.py  SelfAttention.py  __init__.py
Ahri/Asuka/nlp/: NLPBaseNet.py
Ahri/Asuka/nlp/models/: GRU.py  LSTM.py  MultiHeadAttention.py  RNN.py  Transformer.py  __init__.py
Ahri/Asuka/nn/: __init__.py  activation.py  conv.py  init.py
Ahri/Asuka/utils/: __init__.py  cv2_utils.py  moviepy_utils.py  openvino_utils.py  pyav_utils.py  tensorflow_utils.py  tensorrt_utils.py
Ahri/Asuka/vision/: base.py  face.py  keyframe.py  reid.py  yolo.py
Ahri/Asuka/vision/models/: AlexNet.py  DenseNet.py  EfficientNet.py  GoogLeNet.py  LeNet5.py  MobileNet.py  ResNet.py  ShuffleNet.py  SqueezeNet.py  VGG.py  __init__.py
Ahri/Asuka/web/: app.py  main.py
Ahri/Asuka/web/pages/: image.py  map.py  video.py
Camera/: index.html
DataLabling/: index.html
Jetson/: index.html
LLM/: index.html
LLM/ComfyUI/: index.html
LLM/Diffusion/: index.html
LLM/FineTunning/: index.html
LLM/LLaMA.cpp/: index.html
LLM/Ollama/: index.html
LLM/VLLM/: index.html
MCP/: index.html
NLP/: index.html
NLP/Mamba/: index.html
NLP/NLPBaseNet/: index.html
NLP/SelfAttention/: index.html
NLP/Transformer/: index.html
ONNX/: index.html
OpenCV/: index.html
PointCloud/: index.html
SSD/: index.html
TensorRT/: index.html
Vision/: index.html
Vision/DINO/: index.html
Vision/ResNet/: index.html
Vision/SAM/: index.html
Vision/SSD/: index.html
Vision/YOLO/: index.html
YOLO/: index.html
anomalib_learn/: inference.py  train.py
base/: index.html
cmake/: library.cmake
docker/: Dockerfile.nvidia  Dockerfile.pytorch
docs/: 3D_Reconstruction.md  ASR_TTS.md  Camera.md  ONNX.md  OpenCV.md  TensorRT.md  index.md
docs/LLM/: LLaMA.cpp.md  Ollama.md  index.md
docs/Vision/: DINO.md  index.md
ffmpeg_learn/: main.cpp
framework_learn/pytorch_learn/: main.py
framework_learn/tensorflow_learn/: README.md
framework_learn/tensorflow_learn/v2/: main.py  main_rnn.py
include/Ahri/: Asuka.hpp
include/Ahri/Asuka/: ffmpeg_utils.hpp  onnx_utils.hpp
include/Ahri/Asuka/inference/: engine.hpp
include/Ahri/Asuka/inference/backend/: _onnxruntime.hpp  _openvino.hpp  _tensorrt.hpp
learning/: CMakeLists.txt  numba_learning.py  ultralytics_learning.py
learning/anomalib_learning/: README.md
learning/deepstream_learning/: .gitignore  .pylanceignore  Makefile  README.md  common.hpp  common.py  install_third_party.sh  install_thrid_party.sh  main.cpp  main_pyds.py  pyproject.toml
learning/deepstream_learning/.devcontainer/: devcontainer.json  post-create.sh
learning/ffmpeg_learning/: CMakeLists.txt
learning/gstreamer_learning/: CMakeLists.txt  README.md  main.cpp
learning/jax_learning/: base.py
learning/mediapipe_learning/: face_detection.py  face_mesh.py  object_detection_3D.py  pose.py  pose_counter.py
learning/onnx_learning/: convert_to_onnx.py  export_onnx_torchvision.py  export_torchvision_operator.py  main.py  make_onnx_using_onnx_graphsurgeon.py  make_onnx_using_onnx_helper.py  onnx_learning.vcxproj  onnx_learning.vcxproj.filters  subgraph_using_onnx_graphsurgeon.py  transform_onnx_using_onnx_graphsurgeon.py
learning/opencv_learning/: line_detection.py  match_template.py  moving_detection.py  opencv_learning.vcxproj
learning/openvino_learning/: main.cpp  openvino_learning.vcxproj  openvino_learning.vcxproj.filters
learning/openvino_learning/plugins/: ahri_plugin_openvino.vcxproj
learning/pcl_learning/: CMakeLists.txt  main.cpp
learning/realsense_learning/: FAQ.md  real_distance.py
learning/tensorflow_learning/v1/: base.py  tensorboard_learning.py
learning/tensorflow_learning/v2/: base.py  main.py
learning/tensorrt_learning/: export_custom_operator_scalar.py
learning/tensorrt_learning/plugins/: ahri_plugin_tensorrt.vcxproj  ahri_plugin_tensorrt.vcxproj.filters
learning/triton_learning/: main.py
metrics/: index.html
module/: index.html
opencv_learn/: threshold.py
robot/: index.html
scripts/: modelscope_download.py  ultralytics_cli.sh  video2images.py
search/: search_index.json
src/Ahri/Asuka/: asuka.cpp
tensorrt_learn/: FAQ.md
tests/Ahri/Asuka/camera/: test_opencv.py
tests/Ahri/Asuka/llm/: test_ollama_provider.py  test_openai_provider.py
tests/Ahri/Asuka/models/: test_LeNet5.py  test_MultiHeadAttention.py
tests/Ahri/Asuka/nlp/models/: test_GRU.py  test_LSTM.py  test_MultiHeadAttention.py  test_RNN.py  test_SelfAttention.py
tests/Ahri/Asuka/vision/models/: test_AlexNet.py  test_DenseNet.py  test_EfficientNet.py  test_GoogLeNet.py  test_LeNet5.py  test_MobileNet.py  test_ResNet.py  test_ShuffleNet.py  test_SqueezeNet.py  test_VGG.py
