[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Ahri.Asuka"
version = "0.0.1"
authors = [{ name = "Sokyoei" }]
license = { text = "MIT" }
dependencies = ["numpy", "opencv-contrib-python", "loguru"]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["isort", "ruff", "black"]
test = ["pytest", "pytest-asyncio"]
async = [
    "asgiref", # https://github.com/django/asgiref
]
webapp = ["streamlit", "streamlit-webrtc"]
########################################################################################################################
# Inference
########################################################################################################################
tensorrt = ["tensorrt", "cuda-python", "pycuda", "ploygraphy"]
onnx = [
    "onnx",              # https://github.com/onnx/onnx
    "onnx-graphsurgeon", # in TensorRT or `pip install onnx_graphsurgeon --index-url https://pypi.ngc.nvidia.com`
    "onnxruntime-gpu",   # https://github.com/microsoft/onnxruntime or onnxruntime(cpu ver.)
    # "onnxruntime",
    "onnxsim", # https://github.com/daquexian/onnx-simplifier same as `onnx-simplifier`
    # "onnx-simplifier",
    "onnxruntime-extensions", # https://github.com/microsoft/onnxruntime-extensions
]
openvino = ["openvino"]
########################################################################################################################
# Deep Learning
########################################################################################################################
pytorch = [
    "vit-pytorch", # https://github.com/lucidrains/vit-pytorch
    "timm",        # https://github.com/rwightman/pytorch-image-models
]
mediapipe = ["mediapipe"]
tracking = ["boxmot"]
opencv = [
    "imutils",               # https://github.com/PyImageSearch/imutils
    "cv2_enumerate_cameras", # https://github.com/chinaheyu/cv2_enumerate_cameras
]
pose = ["rtmlib"]
ocr = ["pytesseract", "pyocr", "easyocr"]
video = [
    "moviepy", # https://github.com/Zulko/moviepy
    "av",      # https://github.com/PyAV-Org/PyAV
]
audio = [
    "librosa", # https://github.com/librosa/librosa
]
# tensorflow/keras
tensorflow = [
    "keras_cv", # https://github.com/keras-team/keras-cv
]
########################################################################################################################
# LLM
########################################################################################################################
llm = [
    "modelscope",   # https://github.com/modelscope/modelscope
    "openai",       # https://github.com/openai/openai-python
    "transformers", # https://github.com/huggingface/transformers
    "diffusers",    # https://github.com/huggingface/diffusers
    "peft",
]
mcp = ["mcp[cli]", "httpx"]
agent = ["langchain", "langchain-community", "langchain-openai", "langchain-text-splitters"]

[project.scripts]
ahri_asuka_webapp = "Ahri.Asuka.web.main:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["Ahri"]

[tool.isort]
line_length = 120
multi_line_output = 0

[tool.autopep8]
max_line_length = 120

[tool.black]
line-length = 120
preview = true
skip-string-normalization = true
skip-magic-trailing-comma = true

[tool.ruff]
line-length = 120
select = [
    "F",   # pyflakes
    "E",   # pycodestyle error
    "W",   # pycodestyle warning
    "C90", # mccabe
    "I",   # isort
    # "N",   # pep8-naming
    # "D",   # pydocstyle
    "PD",  # pandas-vet
    "NPY", # numpy specific rules
    "RUF", # ruff specific rules
]
ignore = [
    "E501",   # https://docs.astral.sh/ruff/rules/line-too-long/
    "RUF001", # https://docs.astral.sh/ruff/rules/ambiguous-unicode-character-string/
    "RUF002", # https://docs.astral.sh/ruff/rules/ambiguous-unicode-character-docstring/
    "RUF003", # https://docs.astral.sh/ruff/rules/ambiguous-unicode-character-comment/
    "RUF012", # mutable-class-default
]
# ignore-init-module-imports = true

[tool.ruff.isort]

[tool.ruff.pydocstyle]
convention = "google"
