[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Ahri.Asuka"
dynamic = ["version"]
authors = [{ name = "Sokyoei" }]
license = { text = "MIT" }
dependencies = [
    # data analysis
    "numpy",
    "scipy",
    "matplotlib",
    "polars",
    "pandas",
    # vision
    "pillow",
    "opencv-contrib-python",
    "scikit-image",
    # utils
    "loguru",            # https://github.com/Delgan/loguru
    "pydantic-settings", # https://github.com/pydantic/pydantic-settings
    # pytorch
    "torch",
    "torchvision",
    "torchaudio",
    # async
    "asgiref", # https://github.com/django/asgiref
]
requires-python = ">=3.12"

[project.optional-dependencies]
webapp = ["streamlit", "streamlit-webrtc"]
video = [
    "moviepy", # https://github.com/Zulko/moviepy
    "av",      # https://github.com/PyAV-Org/PyAV
]
audio = [
    "librosa", # https://github.com/librosa/librosa
]
########################################################################################################################
# Inference
########################################################################################################################
tensorrt = [
    # "tensorrt", # Lastest release version # https://developer.nvidia.com/tensorrt https://github.com/NVIDIA/TensorRT
    "tensorrt-cu12",
    "cuda-python<13",
    "pycuda",
    "polygraphy",
]
onnx = [
    "onnx",              # https://github.com/onnx/onnx
    "onnx-graphsurgeon", # in TensorRT or `pip install onnx_graphsurgeon --index-url https://pypi.ngc.nvidia.com`
    "onnxruntime-gpu",   # https://github.com/microsoft/onnxruntime or onnxruntime(cpu ver.)
    # "onnxruntime",
    "onnxsim", # https://github.com/daquexian/onnx-simplifier same as `onnx-simplifier`
    # "onnx-simplifier",
    "onnxruntime-extensions", # https://github.com/microsoft/onnxruntime-extensions
]
openvino = ["openvino"]
########################################################################################################################
# Deep Learning
########################################################################################################################
vision = [
    "vit-pytorch",           # https://github.com/lucidrains/vit-pytorch
    "boxmot",
    "rtmlib",
    "pytesseract",
    "pyocr",
    "easyocr",
    "imutils",               # https://github.com/PyImageSearch/imutils
    "cv2-enumerate-cameras", # https://github.com/lukehugh/cv2_enumerate_cameras
]
stereo = ["open3d", "plyfile"]
nlp = ["torchtext"]
mediapipe = ["mediapipe"]
# tensorflow/keras
tensorflow = [
    "keras",
    "tensorflow",
    "keras_cv",            # https://github.com/keras-team/keras-cv
    "types-tensorflow",    # https://github.com/python/typeshed"
    "tensorflow-datasets", # https://github.com/tensorflow/datasets
]
########################################################################################################################
# LLM
########################################################################################################################
llm = [
    # download
    "modelscope",      # https://github.com/modelscope/modelscope
    "huggingface_hub", # https://github.com/huggingface/huggingface_hub
    # api
    "openai", # https://github.com/openai/openai-python
    # models
    "transformers", # https://github.com/huggingface/transformers
    "diffusers",    # https://github.com/huggingface/diffusers
    "timm",         # https://github.com/rwightman/pytorch-image-models
    # finetuning
    "peft",
]
mcp = ["mcp[cli]", "httpx"]
agent = ["langchain", "langchain-community", "langchain-openai", "langchain-text-splitters"]

[project.scripts]
ahri_asuka_webapp = "Ahri.Asuka.web.main:main"

[dependency-groups]
build = ["build", "hatch"]
dev = ["isort", "ruff", "black", "pre-commit"]
test = ["pytest", "pytest-asyncio", "tox", "coverage"]
torchtools = [
    "torchinfo", # https://github.com/TylerYep/torchinfo
    "torchview", # https://github.com/mert-kurttutan/torchview
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["Ahri"]

[tool.hatch.version]
path = "Ahri/Asuka/version.py"
pattern = '__version__ = "(?P<version>.*)"'

[tool.uv]
default-groups = ["dev", "test"]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.ngc.nvidia.com"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }

[tool.isort]
line_length = 120
multi_line_output = 0

[tool.autopep8]
max_line_length = 120

[tool.black]
line-length = 120
preview = true
skip-string-normalization = true
skip-magic-trailing-comma = true

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    "UP",  # pyupgrade
    "F",   # pyflakes
    "E",   # pycodestyle error
    "W",   # pycodestyle warning
    "C90", # mccabe
    "I",   # isort
    # "N",   # pep8-naming
    # "D",   # pydocstyle
    "PD",  # pandas-vet
    "NPY", # numpy specific rules
    "RUF", # ruff specific rules
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # https://docs.astral.sh/ruff/rules/line-too-long/
    "RUF001", # https://docs.astral.sh/ruff/rules/ambiguous-unicode-character-string/
    "RUF002", # https://docs.astral.sh/ruff/rules/ambiguous-unicode-character-docstring/
    "RUF003", # https://docs.astral.sh/ruff/rules/ambiguous-unicode-character-comment/
    "RUF012", # https://docs.astral.sh/ruff/rules/mutable-class-default/
    "UP008",  # https://docs.astral.sh/ruff/rules/super-call-with-parameters/
]
# ignore-init-module-imports = true
pydocstyle = { convention = "google" }

[tool.ruff.lint.isort]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120
indent-style = "space"
line-ending = "lf"
quote-style = "double"
skip-magic-trailing-comma = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
