[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Ahri.Asuka"
dynamic = ["version"]
authors = [{ name = "Sokyoei" }]
license = { text = "MIT" }
dependencies = [
    # data analysis
    "numpy",
    "scipy",
    "matplotlib",
    "polars",
    "pandas",
    # vision
    "pillow",
    "opencv-contrib-python",
    "scikit-image",
    # utils
    "loguru",
    "pydantic-settings",
    # pytorch
    "torch",
    "torchvision",
    "torchaudio",
    # async
    "asgiref",
]
requires-python = ">=3.12"

[project.optional-dependencies]
webapp = ["streamlit", "streamlit-webrtc"]
video = ["moviepy", "av"]
audio = ["librosa"]
# Inference
tensorrt = [
    # "tensorrt", # Lastest release version
    "tensorrt-cu12",
    "cuda-python<13",
    "pycuda",
    "polygraphy",
]
onnx = [
    "onnx",
    "onnx-graphsurgeon",
    "onnxruntime-gpu",        # or "onnxruntime",
    "onnxsim",                # or "onnx-simplifier",
    "onnxruntime-extensions",
]
openvino = ["openvino"]
# Deep Learning
vision = ["vit-pytorch", "boxmot", "rtmlib", "pytesseract", "pyocr", "easyocr", "imutils", "cv2-enumerate-cameras"]
stereo = ["open3d", "plyfile"]
nlp = ["torchtext"]
mediapipe = ["mediapipe"]
tensorflow = ["keras", "tensorflow", "keras_cv", "types-tensorflow", "tensorflow-datasets"]
# LLM
llm = [
    # download
    "modelscope",
    "huggingface_hub",
    # api
    "openai",
    # models
    "transformers",
    "diffusers",
    "timm",
    # finetuning
    "peft",
]
mcp = ["mcp[cli]", "httpx"]
agent = ["langchain", "langchain-community", "langchain-openai", "langchain-text-splitters"]

[project.scripts]
ahri_asuka_webapp = "Ahri.Asuka.web.main:main"

[dependency-groups]
build = ["build", "hatch"]
dev = ["isort", "ruff", "black", "pre-commit"]
test = ["pytest", "pytest-asyncio", "tox", "coverage"]
torchtools = ["torchinfo", "torchview"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["Ahri"]

[tool.hatch.version]
path = "Ahri/Asuka/version.py"
pattern = '__version__ = "(?P<version>.*)"'

[tool.uv]
default-groups = ["dev", "test"]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.ngc.nvidia.com"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }

[tool.isort]
line_length = 120
multi_line_output = 0

[tool.autopep8]
max_line_length = 120

[tool.black]
line-length = 120
preview = true
skip-string-normalization = true
skip-magic-trailing-comma = true

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    "UP",  # pyupgrade
    "F",   # pyflakes
    "E",   # pycodestyle error
    "W",   # pycodestyle warning
    "C90", # mccabe
    "I",   # isort
    # "N",   # pep8-naming
    # "D",   # pydocstyle
    "PD",  # pandas-vet
    "NPY", # numpy specific rules
    "RUF", # ruff specific rules
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # https://docs.astral.sh/ruff/rules/line-too-long/
    "RUF001", # https://docs.astral.sh/ruff/rules/ambiguous-unicode-character-string/
    "RUF002", # https://docs.astral.sh/ruff/rules/ambiguous-unicode-character-docstring/
    "RUF003", # https://docs.astral.sh/ruff/rules/ambiguous-unicode-character-comment/
    "RUF012", # https://docs.astral.sh/ruff/rules/mutable-class-default/
    "UP008",  # https://docs.astral.sh/ruff/rules/super-call-with-parameters/
]
# ignore-init-module-imports = true
pydocstyle = { convention = "google" }

[tool.ruff.lint.isort]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120
indent-style = "space"
line-ending = "lf"
quote-style = "double"
skip-magic-trailing-comma = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
