[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepstream_learning"
version = "1.0.0"
authors = [{ name = "Sokyoei" }]
license = { text = "MIT" }
dependencies = [
    "loguru>=0.7.3",
    "onnx>=1.21.0",
    "onnxscript>=0.7.0",
    "onnxslim>=0.1.94",
    "pyyaml>=6.0.3",
    "ultralytics>=8.4.60",
]
requires-python = ">=3.12"

[dependency-groups]
build = ["build", "hatch"]
dev = ["isort", "ruff", "black", "pre-commit"]
extensions = ["pybind11-stubgen>=2.5.5", "pyds-stubs>=1.2.2", "pygobject-stubs>=2.17.0"]
jupyter = ["jupyterlab>=4.5.8"]
test = ["pytest", "pytest-asyncio", "tox", "coverage"]

[tool.hatch.build.targets.sdist]
only-include = ["main.py"]

[tool.hatch.build.targets.wheel]
only-include = ["main.py"]

[tool.uv]
default-groups = ["dev", "extensions", "test"]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
# DeepStream 已经在系统中安装了所需的 PyGObject, 为了 `pygobject-stubs` 顺利安装，构建时忽略它的依赖，等效 `pip install pygobject-stubs --no-deps`
dependency-metadata = [{ name = "pygobject-stubs", requires-dist = [] }]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.ngc.nvidia.com"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }

[tool.isort]
line_length = 120
multi_line_output = 0

[tool.autopep8]
max_line_length = 120

[tool.black]
line-length = 120
preview = true
skip-string-normalization = true
skip-magic-trailing-comma = true

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"
exclude = ["typings", ".venv"]

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    "UP",  # pyupgrade
    "F",   # pyflakes
    "E",   # pycodestyle error
    "W",   # pycodestyle warning
    "C90", # mccabe
    "I",   # isort
    # "N",   # pep8-naming
    # "D",   # pydocstyle
    "PD",  # pandas-vet
    "NPY", # numpy specific rules
    "RUF", # ruff specific rules
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # https://docs.astral.sh/ruff/rules/line-too-long/
    "RUF001", # https://docs.astral.sh/ruff/rules/ambiguous-unicode-character-string/
    "RUF002", # https://docs.astral.sh/ruff/rules/ambiguous-unicode-character-docstring/
    "RUF003", # https://docs.astral.sh/ruff/rules/ambiguous-unicode-character-comment/
    "RUF012", # https://docs.astral.sh/ruff/rules/mutable-class-default/
    "UP008",  # https://docs.astral.sh/ruff/rules/super-call-with-parameters/
]
# ignore-init-module-imports = true
pydocstyle = { convention = "google" }

[tool.ruff.lint.isort]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120
indent-style = "space"
line-ending = "lf"
quote-style = "double"
skip-magic-trailing-comma = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
